style: fix mobile overflow and adjust spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -133,11 +133,11 @@ body {
     }
 
     main {
-        @apply mx-auto px-6 max-sm:px-4 flex flex-col gap-8 bg-background h-full max-w-[1400px] py-10;
+        @apply px-6 max-sm:px-4 flex flex-col gap-8 bg-background h-full max-w-[1400px] py-10;
     }
 
     h1 {
-        @apply text-3xl font-bold;
+        @apply text-3xl max-sm:text-lg font-bold;
     }
 }
 
